[tool.poetry]
name = "Flame OS"
version = "0.1.0"
description = "the Flame Operating System open source project"
authors = ["Jackson Schultz"]

[tool.poetry.dependencies]
python = "^3.8"
webbot = "^0.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
